[project]
name = "trim-streams"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil",
    "types-psutil",
    "pydantic",
    "setuptools",
    "types-setuptools",
]

[project.license]
text = "Apache License"

[project.optional-dependencies]
dev = ["ruff", "mypy", "radon", "vulture"]

[tool.ruff]
line-length = 120
fix = true
unsafe-fixes = true
preview = true

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.10"
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false

[tool.radon]
cc = ["-a", "-nc", "-s"]
mi = ["-s"]

[tool.ruff.lint]
preview = true
select = [
    "RUF",
    "D",
    "F",
    "W",
    "N",
    "I",
    "E",
    "A",
    "B",
    "Q",
    "PL",
    "C90",
    "UP",
    "RET",
    "SIM",
    "NPY",
    "PD",
    "ARG",
    "TID",
    "PTH",
    "ISC",
    "PIE",
    "YTT",
    "ASYNC",
    "C4",
    "T10",
    "COM",
    "RSE",
    "PGH",
    "PLR",
    "PLC",
    "PGH",
    "FURB",
    "PLW",
    "TRY",
    "PERF",
    "EXE",
    "DTZ",
    "INT",
    "ISC",
    "ICN",
    "LOG",
    "FLY",
]
ignore = ["COM812", "TRY003", "TRY300", "ISC001"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"

[tool.coverage.run]
source = ["."]
branch = true

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff.lint.pydocstyle]
convention = "google"
